src/main/kotlin/com/example/gymi/global/error/ErrorCode.kt
package com.example.gymi.global.error

enum class ErrorCode(

        val status: Int,
        val message: String
) {
}